--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         <p class="meta">
             by <a href="http://www.twitter.com/arvindvyas2">Arvind Vyas</a>
-            
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3748111455359997"
+                 crossorigin="anonymous"></script>
             <br />
             please report issues on <a href="https://github.com/arvindvyas/git-for-beginners/issues">github</a>
         </p>
